Added smartcard column to member, add ability to select by id or smartcard
