# documentation/swagger/api.yaml
@@ -375,12 +375,8 @@ paths:
                   $ref: "#/definitions/Group"
               links:
                 type: "object"
-        401:
-          $ref: '#/responses/401'
         500:
           $ref: '#/responses/500'
-      security:
-        - basicAuth: []
   /group/{groupId}:
     get:
       summary: "Return a group"
@@ -565,7 +561,6 @@ paths:
                 type: "integer"
                 example: 100
                 description: "Number to create"
-
       responses:
         201:
           description: "successful operation"
@@ -620,10 +615,8 @@ paths:
           $ref: '#/responses/404'
         500:
           $ref: '#/responses/500'
-      security:
-        - basicAuth: []
-    put:
-      summary: "Edit a group"
+    post:
+      summary: "Create a member"
       description: ""
       consumes:
         - "application/json"
@@ -632,53 +625,44 @@ paths:
       parameters:
         - in: "body"
           name: "body"
-          description: "Name of group"
+          description: "Member details"
           required: true
           schema:
-            $ref: "#/definitions/Group"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
             type: "object"
+            required:
+              - group
+              - smartcard
+              - defaultTransportMode
+              - defaultDistance
             properties:
-              data:
-                $ref: "#/definitions/Group"
-              links:
-                type: "object"
-        400:
-          $ref: '#/responses/400'
-        401:
-          $ref: '#/responses/401'
-        500:
-          $ref: '#/responses/500'
-      security:
-        - basicAuth: []
-    delete:
-      summary: "Delete a scheme"
-      description: ""
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      responses:
-        200:
-          description: "successful operation"
-          schema:
-            type: "object"
-            properties:
-              data:
+              group:
                 type: "string"
+                example: "/group/1"
+              defaultTransportMode:
+                type: "string"
+                example: "bus"
+              defaultDistance:
+                type: "number"
+                description: "Distance in miles"
+                example: 1.2
+              smartcard:
+                type: "integer"
+                example: 654321002222230099
+                description: "Number to create"
+      responses:
+        201:
+          description: "successful operation"
+          schema:
+            type: "object"
+            properties:
+              data:
+                $ref: "#/definitions/Member"
               links:
                 type: "object"
         400:
           $ref: '#/responses/400'
-        401:
-          $ref: '#/responses/401'
         500:
           $ref: '#/responses/500'
-      security:
-        - basicAuth: []
 
   /journey:
     post:
